--- a/analisador/templates/analisador/relatorio.html
+++ b/analisador/templates/analisador/relatorio.html
@@ -177,7 +177,7 @@
                 <div class="card-footer d-flex justify-content-end align-items-center mt-3">
                     <strong class="me-3">Para os itens marcados:</strong>
                     <div class="input-group" style="width: 350px;">
-                        <input type="text" name="categoria_em_lote" class="form-control" placeholder="Digite a categoria para todos" required>
+                        <input type="text" name="categoria_em_lote" class="form-control" placeholder="Digite a categoria" required>
                         <button type="submit" class="btn btn-primary">
                             <i class="bi bi-check2-all"></i> Aplicar a Todos
                         </button>
